--- a/tailwind-sandbox-starter/05-sizing/index.html
+++ b/tailwind-sandbox-starter/05-sizing/index.html
@@ -1,35 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Sizing</title>
-  </head>
-  <body>
-    <!-- Width -->
 
-    <!-- Percentages -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Sizing</title>
+</head>
 
-    <!-- Width of the viewport -->
+<body>
+  <!-- Width -->
+  <div class="bg-black text-white w-12">Hello</div>
+  <div class="bg-black text-white w-48">Hello</div>
+  <div class="bg-black text-white w-96">Hello</div>
+  <!-- Percentages -->
+  <div class="bg-green-700 text-white w-1/4">Hello</div>
+  <div class="bg-green-700 text-white w-1/3">Hello</div>
+  <div class="bg-green-700 text-white w-1/2">Hello</div>
 
-    <!-- 100% of container -->
+  <!-- Width of the viewport -->
+  <div class="bg-blue-500 text-white w-screen">Hello</div>
+  <!-- 100% of container -->
+  <div class="bg-blue-500 text-white w-full">Hello</div>
+  <!-- min/max content -->
 
-    <!-- min/max content -->
+  <!-- Arbitrary width -->
+  <div class="bg-blue-700 text-white w-[300px]">Hello</div>
 
-    <!-- Arbitrary width -->
+  <!-- Max Width -->
+  <div class="bg-blue-300 text-white max-w-lg mx-auto">
+    sahdau hiuenhwpiunriervreiurehnvwnwproivew
+    sahdau hiuenhwpiunriervreiurehnvwnwproivew
+    sahdau hiuenhwpiunriervreiurehnvwnwproivew
+  </div>
+  <!-- Height (Most of the same options as widths) -->
+  <div class="flex items-end">
+    <div class="bg-orange-500 w-20 h-24">Hello</div>
+    <div class="bg-orange-500 w-20 h-32">Hello</div>
+    <div class="bg-orange-500 w-20 h-48">Hello</div>
+    <div class="bg-orange-500 w-20 h-64">Hello</div>
+    <div class="bg-orange-500 w-20 h-96">Hello</div>
+    <div class="bg-orange-500 w-20">Hello</div>
+  </div>
+  <!-- Min Height -->
 
-    <!-- Max Width -->
+  <!-- Max Height -->
 
-    <!-- Height (Most of the same options as widths) -->
+  <!-- Full screen height -->
+  <div class="bg-blue-300 text-white h-screen">Hello</div>
+</body>
 
-    <!-- Min Height -->
-
-    <!-- Max Height -->
-
-    <!-- Full screen height -->
-  </body>
 </html>
 
 <!-- 
