--- a/tailwind-sandbox-starter/07-backgrounds-shadows/index.html
+++ b/tailwind-sandbox-starter/07-backgrounds-shadows/index.html
@@ -1,21 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Backgrounds & Shadows</title>
-  </head>
-  <body>
-    <!-- Background Classes -->
 
-    <!-- Gradients -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Backgrounds & Shadows</title>
+</head>
 
-    <!-- Shadows -->
+<body>
+  <!-- Background Classes -->
+  <div class="h-64 w-72 bg-no-repeat bg-cover bg-center" style="background-image: url('../assets/img/img1.jpg');">
+  </div>
+  <!-- Gradients -->
+  <div class="h-24 bg-gradient-to-l from-cyan-500 to-blue-500"></div>
+  <!-- Shadows -->
+  <div class="w-96 mt-6 ml-4 p-3 shadow">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta est itaque soluta iusto unde amet, nihil id ad cumque
+    reprehenderit!
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-md">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta est itaque soluta iusto unde amet, nihil id ad cumque
+    reprehenderit!
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-lg">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta est itaque soluta iusto unde amet, nihil id ad cumque
+    reprehenderit!
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-xl shadow-red-500">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta est itaque soluta iusto unde amet, nihil id ad cumque
+    reprehenderit!
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-blue-500/50">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta est itaque soluta iusto unde amet, nihil id ad cumque
+    reprehenderit!
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-inner shadow-2xl">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta est itaque soluta iusto unde amet, nihil id ad cumque
+    reprehenderit!
+  </div>
+  <!-- Mix Blend -->
+  <div class="flex justify-center -space-x-24">
+    <div class="mix-blend-multiply bg-blue-400">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto
+      dignissimos illo
+      reiciendis numquam! Porro dignissimos perferendis suscipit cupiditate soluta neque.</div>
+    <div class="mix-blend-multiply bg-pink-400">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. A aut pariatur adipisci maiores nisi distinctio dolorem
+      labore vel voluptatibus alias?
+    </div>
+  </div>
+</body>
 
-    <!-- Mix Blend -->
-  </body>
 </html>
 
 <!-- Background Size
