--- a/tailwind-sandbox-starter/08-borders/index.html
+++ b/tailwind-sandbox-starter/08-borders/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Borders</title>
-  </head>
-  <body>
-    <!-- Border Width & Colors -->
 
-    <!-- Border Radius -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Borders</title>
+</head>
 
-    <!-- Outline -->
-  </body>
+<body>
+  <!-- Border Width & Colors -->
+  <div class="w-96 m-3 p-5 border">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nemo.
+  </div>
+  <div class="w-96 m-3 p-5 border-t-2">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nemo.
+  </div>
+  <div class="w-96 m-3 p-5 border-x-4 border-red-500">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nemo.
+  </div>
+  <div class="w-96 m-3 p-5 border-y-8">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nemo.
+  </div>
+  <!-- Border Radius -->
+  <div class="w-96 m-3 p-5 border-4 rounded-lg">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nemo.
+  </div>
+  <div class="w-96 m-3 p-5 border-4 rounded-full">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nemo.
+  </div>
+  <div class="w-96 m-3 p-5 border-4 rounded-t-2xl">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nemo.
+  </div>
+  <!-- Outline -->
+  <button class="outline outline-red-500 outline-4 outline-offset-8">Click</button>
+
+</body>
+
 </html>
 
 <!-- Border Widths
