--- a/tailwind-sandbox-starter/09-filters/index.html
+++ b/tailwind-sandbox-starter/09-filters/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Filters</title>
-  </head>
-  <body>
-    <!-- Blur -->
-    
-    <!-- Brightness ->
 
-    <!-- Contrast -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Filters</title>
+</head>
 
-    <!-- Grayscale -->
+<body>
+  <!-- Blur -->
+  <div class="blur-sm">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, enim?
+  </div>
+  <div class="blur">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, enim?
+  </div>
+  <img class="blur-xl" src="../assets/img/img1.jpg" alt="">
+  <!-- Brightness -->
+  <img class="brightness-200" src="../assets/img/img2.jpg" alt="">
+  <!-- Contrast -->
 
-    <!-- Invert -->
+  <!-- Grayscale -->
 
-    <!-- Sepia -->
+  <!-- Invert -->
 
-    <!-- Hue Rotate -->
-  </body>
+  <!-- Sepia -->
+
+  <!-- Hue Rotate -->
+</body>
+
 </html>
 
 <!-- Blur
